# RustMail-Light

./: Cargo.toml  README-zh.md  README.md  config.example.toml
.github/workflows/: ci.yml
crates/app-rustmaild/: Cargo.toml
crates/app-rustmaild/src/: main.rs
crates/core-auth/: Cargo.toml
crates/core-auth/src/: lib.rs
crates/core-domain/: Cargo.toml
crates/core-domain/src/: lib.rs
crates/core-policy/: Cargo.toml
crates/core-policy/src/: lib.rs
crates/core-storage/: Cargo.toml
crates/core-storage/src/: lib.rs
crates/proto-imap/: Cargo.toml
crates/proto-imap/src/: lib.rs
crates/proto-pop3/: Cargo.toml
crates/proto-pop3/src/: lib.rs
crates/proto-smtp/: Cargo.toml
crates/proto-smtp/src/: lib.rs
crates/service-api/: Cargo.toml
crates/service-api/src/: lib.rs
crates/service-worker/: Cargo.toml
crates/service-worker/src/: lib.rs
deploy/: Caddyfile  Dockerfile  docker-compose.yml
migrations/: 001_initial_schema.sql
scripts/: install-zh.sh  install.sh
web/mail-ui/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/mail-ui/src/: App.tsx  index.css  main.tsx
web/mail-ui/src/api/: client.ts
web/mail-ui/src/pages/: Inbox.tsx  Login.tsx
web/mail-ui/src/store/: auth.ts
