[package]
name = "core-policy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
core-domain = { workspace = true }

async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
